--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -1,2 +1,2 @@
 compile.on.save=true
-user.properties.file=/Users/elisaortizloyola/Library/Application Support/NetBeans/11.1/build.properties
+user.properties.file=C:\\Users\\JRODRIGUORT\\AppData\\Roaming\\NetBeans\\8.2\\build.properties
